--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>My First Website and Git Practice</h1>
     <h2>Let's Go!</h2>
     <h3>Boombashtik!!!</h3>
+    <input type="text" />
+    <br />
+    <button>Click Me Baby</button>
   </body>
 </html>
