--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>My First Website and Git Practice</h1>
     <h2>Let's Go!</h2>
     <h3>Boombashtik!!!</h3>
+    <p>I am a lover boy...</p>
     <input type="text" />
     <br />
     <button>Click Me Baby</button>
